<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/board_grid"
        android:padding="3dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/usersOnlineText">

        <Button
            android:id="@+id/board_product_btn"
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="0.30"
            android:background="@drawable/shape_ring"
            android:layout_margin="2dp"
            android:text="@string/board_product"

            android:shadowColor="@color/cardview_dark_background"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/board_barcode_btn"
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="0.20"
            android:background="@drawable/shape_ring"
            android:text="@string/board_barcode"

            android:shadowColor="@color/cardview_dark_background"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:layout_margin="2dp"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/board_ecode_btn"
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="0.20"
            android:background="@drawable/shape_ring"
            android:text="@string/board_ecode"

            android:shadowColor="@color/cardview_dark_background"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:layout_margin="2dp"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/board_ingredient_btn"
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:layout_weight="0.30"
            android:background="@drawable/shape_ring"
            android:text="@string/board_ingredient"

            android:shadowColor="@color/cardview_dark_background"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:layout_margin="2dp"
            android:layout_gravity="center" />


    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/news_feed_text"
            android:id="@+id/newsFeedText"
            android:layout_below="@+id/board_grid"
            android:layout_alignParentLeft="true"

            android:paddingTop="10dp"
            android:paddingLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/users_online"
            android:id="@+id/usersOnlineText"
            android:layout_alignBottom="@+id/newsFeedText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#029dda"
            android:singleLine="false"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/board_newsListView"
        android:layout_below="@+id/newsFeedText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="?attr/actionBarSize"/>


</RelativeLayout>